BUG FIX resized images for the what's going on section so they all fit into the card right. Removed the card footers. NEED TO ALIGN THE NAV BAR TO THE RIGHT

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,8 +155,6 @@ body {
 .testimonials-h2 {
     color:white;
     text-transform: uppercase;
-    
-
 }
 
 .card h-100 .card-img-top {
@@ -216,7 +214,6 @@ body {
 }
 .navbar-toggler {
     color: #fff;
-    size: 90px;
 }
 
 
